port to pywal themes

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,5 +7,6 @@ font_size 14.5
 font_family JetBrainsMonoNL NFM Regular
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
-include current-theme.conf
+#include current-theme.conf
 # END_KITTY_THEME
+include ~/.cache/wal/colors-kitty.conf
